force-app/main/default/objects/Appointment__c/fields/FeedBack__c.field-meta.xml
<CustomField>
    <fullName>FeedBack__c</fullName>
    <label>FeedBack</label>
    <type>TextArea</type>
</CustomField>