force-app/main/default/objects/Appointment__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>