force-app/main/default/objects/Appointment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Showroom Visit</fullName>
            </value>
            <value>
                <fullName>Test Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>