force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Lead__c</columns>
    <columns>FeedBack__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>